[tool.poetry]
name = "litestar-bug"
version = "0.1.0"
description = ""
authors = ["Gauthier, Jacob <jacob.gauthier@intel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.9.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
